
2017-12-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c, common.h, reportio.c: minor adjustments after merge
	  of reportwriter branch
	* coblocal.h, common.h: moved declarations for COB_DEBUG_LOG to common.h
	  and set to COB_HIDDEN instead of COB_EXTERN
	* common.c, coblocal.h: disabled all parts of internal debug log
	  if COB_DEBUG_LOG is not defined

2017-12-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_sys_system) [_WIN32]: FR #153 workaround for CALL 'SYSTEM'
	  on buggy Woe32 which removes first and last quote from command

2017-11-28  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_get_current_date_and_time_from_os)[!_WIN32]: fixed #469
	  ACCEPT FROM DAY being one too low

2017-11-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c, common.h, coblocal.h, call.c: added (cob_init_nomain) to start
	  runtime initialization without setting the main handle (saves time on
	  each function lookup)
	* call.c [COB_BORKED_DLOPEN]: no processing of mainhandle

2017-11-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c, common.h, coblocal.h: added COB_SET_DEBUG as cob_debugging_mode
	  in local settings / global pointer
	* common.c, coblocal.h: added internal configuration status option ENV_RESETS
	  for "needs additional code on change"
	* common.c: added ENV_RESETS to COB_SET_DEBUG changing the externalized value
	  in cobglobtr when setting changes during runtime

2017-11-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.h: suppress C statement not reached warnings for Solaris C,
	  see bug #456

2017-11-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* fileio.c: fixed bug #457 explicit check for error after all put/write
	  calls (calls to put were completely unchecked before) and raise correct
	  fileio status (especially 34 for disk/quota full) instead of status 30
