@@ -1,4 +1,8 @@
 
+2017-12-16  Ron Norman <rjn@inglenet.com>
+
+	* numeric.c (cob_decimal_get_ieee64dec): fix bug #470 (coding error)
+
 2017-12-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* common.c, common.h, reportio.c: minor adjustments after merge
